# intrors

./: .hgignore  Cargo.toml  Makefile  README.rst  vcs_bkup.sh
_templates/mustache/: render_mustache.groovy  render_mustache.py  render_mustache.rb  usage.txt
_templates/mustache/skeleton-rs/: data.json  data.toml  data.yaml
_templates/mustache/skeleton-rs/{{name}}/: .gitignore
_templates/mustache/skeleton-rs/{{name}}/choices/: post_gen_project.groovy.mustache  post_gen_project.py.mustache  post_gen_project.rb.mustache  post_gen_project.sh.mustache  post_render.groovy.mustache  post_render.py.mustache  post_render.rb.mustache
_templates/mustache/skeleton-rs/{{name}}/choices/_parent_build_tool/cargo/: Cargo.toml.mustache  Makefile.mustache
_templates/mustache/skeleton-rs/{{name}}/choices/_parent_init/: .gitignore  .hgignore  exclude.lst  vcs_bkup.sh
_templates/mustache/skeleton-rs/{{name}}/choices/_parent_readme/: README.adoc.mustache  README.md.mustache  README.rst.mustache
_templates/mustache/skeleton-rs/{{name}}/choices/build_tool/cargo/: Cargo.toml.mustache  Makefile-auxffi.mk  Makefile-targets.mk.mustache  Makefile.new.mustache  build.rs.bak  configure.sh
_templates/mustache/skeleton-rs/{{name}}/choices/build_tool/make/: Cargo.toml.mustache  Makefile-auxffi.mk  Makefile-targets.mk.mustache  Makefile.new.mustache
_templates/mustache/skeleton-rs/{{name}}/choices/license/: LICENSE_Apache-2.0.mustache  LICENSE_BSD-3-Clause.mustache  LICENSE_GPL-3.0+.mustache  LICENSE_ISC.mustache  LICENSE_MIT.mustache
_templates/mustache/skeleton-rs/{{name}}/choices/readme/: README.adoc.mustache  README.md.mustache  README.rst.mustache
_templates/mustache/skeleton-rs/{{name}}/choices/testfrwk/test/tests/: tc_classic.rs.mustache  tp_classic.rs.mustache  tp_new.rs.mustache  ts_main.rs.mustache
_templates/mustache/skeleton-rs/{{name}}/src/: lib.rs.mustache  main.rs.mustache
intrors-foreignc/: .hgignore  Cargo.toml  Makefile  Makefile-targets.mk  Makefile.new  README.rst  build.rs  exclude.lst
intrors-foreignc/resources/: log4rs.toml  log4rs.yaml
intrors-foreignc/src/: classic.rs  lib.rs
intrors-foreignc/tests/: tc_classic.rs  tp_classic.rs  ts_main.rs
intrors-intro/: .hgignore  Cargo.toml  Makefile  Makefile-targets.mk  Makefile.new  README.rst
intrors-intro/src/: intro.rs  lib.rs  main.rs
intrors-intro/tests/: tc_classic.rs  tc_collections.rs  tp_classic.rs  tp_new.rs  ts_main.rs
intrors-practice/: .gitignore  Cargo.toml  Makefile  Makefile-targets.mk  Makefile.new  README.rst  exclude.lst
intrors-practice/src/: classic.rs  lib.rs  sequenceops.rs
intrors-practice/tests/: tc_classic.rs  tc_sequenceops.rs  tp_classic.rs  tp_sequenceops.rs  ts_main.rs
intrors-util/: Cargo.toml  Makefile  Makefile-targets.mk  Makefile.new  README.rst
intrors-util/resources/: log4rs.toml  log4rs.yaml
intrors-util/src/: lib.rs  person.rs  util.rs
intrors-util/tests/: tc_classic.rs  tc_new.rs  tp_classic.rs  tp_new.rs  ts_main.rs
