[package]
name = "intrors_intro"
version = "0.1.0"
authors = ["thebridge0491 <thebridge0491-codelab@yahoo.com>"]
description = """
Main app sub-package for Rust Intro examples project.
"""
#documentation = "..."
readme = "README.rst"
homepage = "https://bitbucket.org/thebridge0491/intrors"
repository = "https://bitbucket.org/thebridge0491/intrors"
license = "Apache-2.0"
keywords = ["demo", "development", "intro"]
#workspace = "../"

exclude = ["target/**/*", "build/**/*", "**/*~"]
#include = ["resources/**/*", "**/doc/*", "**/*.rs", "Cargo.toml"]

rust-version = "1.57"
edition = "2021"
autotests = false

[dependencies]
#libc = ">=0.2"
num = ">=0.4"
itertools = ">=0.10"
log = ">=0.4"
rust-ini = ">=0.18"
#env_logger = ">=0.9"
log4rs = { version = ">=1.0", features = ["toml"] }
argparse = ">=0.2"
getopts = ">=0.2"
regex = ">=1.5"
chrono = ">=0.4"
rand = ">=0.8"
serde_json = ">=1.0"
toml = ">=0.5"
yaml-rust = ">=0.4"
intrors_util = { version = ">=0.1", path = "../intrors-util" }
intrors_practice = { version = ">=0.1", path = "../intrors-practice" }

[dev-dependencies]
quickcheck = ">=1.0"
intrors_util = { version = ">=0.1", path = "../intrors-util" }

[build-dependencies]

[lib]
#name = "intrors_intro"
#path = "src/lib.rs"
#crate-type = ["lib"] # ["rlib", "dylib", "staticlib"]
[[bin]]
name = "intrors-main"
path = "src/main.rs"

[[test]]
name = "ts_main-intro"
path = "tests/ts_main.rs"
