[package]
name = "intrors_practice"
version = "0.1.0"
authors = ["thebridge0491 <thebridge0491-codelab@yahoo.com>"]
description = """
Practice sub-package for Rust Intro examples project.
"""
#documentation = "..."
readme = "README.rst"
homepage = "https://bitbucket.org/thebridge0491/intrors"
repository = "https://bitbucket.org/thebridge0491/intrors"
license = "Apache-2.0"
keywords = ["demo", "development", "practice"]
#workspace = "../"

exclude = ["target/**/*", "build/**/*", "**/*~"]
#include = ["resources/**/*", "**/doc/*", "**/*.rs", "Cargo.toml"]

rust-version = "1.57"
edition = "2021"
autotests = false

[dependencies]
#libc = ">=0.2"
num = ">=0.4"
itertools = ">=0.10"
log = ">=0.4"

[dev-dependencies]
quickcheck = ">=1.0"
intrors_util = { version = ">=0.1", path = "../intrors-util" }

[build-dependencies]

[lib]
#name = "intrors_practice"
#path = "src/lib.rs"
#crate-type = ["lib"] # ["rlib", "dylib", "staticlib"]

[[test]]
name = "ts_main-practice"
path = "tests/ts_main.rs"
