[package]
name = "intrors_util"
version = "0.1.0"
authors = ["thebridge0491 <thebridge0491-codelab@yahoo.com>"]
description = """
Utilities sub-package for Rust Intro examples project.
"""
#documentation = "..."
readme = "README.rst"
homepage = "https://bitbucket.org/thebridge0491/intrors"
repository = "https://bitbucket.org/thebridge0491/intrors"
license = "Apache-2.0"
keywords = ["demo", "development", "util"]
#workspace = "../"

exclude = ["target/**/*", "build/**/*", "**/*~"]
#include = ["resources/**/*", "**/doc/*", "**/*.rs", "Cargo.toml"]

rust-version = "1.57"
edition = "2021"
autotests = false

[dependencies]
#libc = ">=0.2"
num = ">=0.4"
itertools = ">=0.10"
rust-ini = ">=0.18"

[dev-dependencies]
quickcheck = ">=1.0"

[build-dependencies]

[lib]
#name = "intrors_util"
#path = "src/lib.rs"
#crate-type = ["lib"] # ["rlib", "dylib", "staticlib"]

[[test]]
name = "ts_main-util"
path = "tests/ts_main.rs"
